Refactor file writing methods to use Files.writeString for improved readability